v0.3.0
======

* Moved to data-driven unit tests
* Implemented create* entity methods in RDF representer
* Removed SensorObservationExtractor because obsolete
* Introduced QueryFactory and ResultSet
* Modularized Cassandra and Sesame request handling
* Introduced data and knowledge stores
* Sensor specifications now via the knowledge store
* Implemented query rewriting to support variable sensorId, propertyId, and featureId

v0.2.0
======

* Added sensor observation API

v0.1.0
======

* First release