@@ -1,0 +1,30 @@
+http://example.org#thermometer,http://example.org#temperature,http://example.org#air,2015-06-01T12:00:00.000+03:00,22,http://qudt.org/vocab/unit#DegreeCelsius
+http://example.org#thermometer,http://example.org#temperature,http://example.org#air,2015-06-02T12:00:00.000+03:00,20,http://qudt.org/vocab/unit#DegreeCelsius
+http://example.org#thermometer,http://example.org#temperature,http://example.org#air,2015-06-03T12:00:00.000+03:00,16,http://qudt.org/vocab/unit#DegreeCelsius
+http://example.org#thermometer,http://example.org#temperature,http://example.org#air,2015-06-04T12:00:00.000+03:00,14,http://qudt.org/vocab/unit#DegreeCelsius
+http://example.org#thermometer,http://example.org#temperature,http://example.org#air,2015-06-05T12:00:00.000+03:00,14,http://qudt.org/vocab/unit#DegreeCelsius
+http://example.org#thermometer,http://example.org#temperature,http://example.org#air,2015-06-06T12:00:00.000+03:00,15,http://qudt.org/vocab/unit#DegreeCelsius
+http://example.org#thermometer,http://example.org#temperature,http://example.org#air,2015-06-07T12:00:00.000+03:00,19,http://qudt.org/vocab/unit#DegreeCelsius
+http://example.org#thermometer,http://example.org#temperature,http://example.org#air,2015-06-08T12:00:00.000+03:00,16,http://qudt.org/vocab/unit#DegreeCelsius
+http://example.org#thermometer,http://example.org#temperature,http://example.org#air,2015-06-09T12:00:00.000+03:00,13,http://qudt.org/vocab/unit#DegreeCelsius
+http://example.org#thermometer,http://example.org#temperature,http://example.org#air,2015-06-10T12:00:00.000+03:00,11,http://qudt.org/vocab/unit#DegreeCelsius
+http://example.org#thermometer,http://example.org#temperature,http://example.org#air,2015-06-11T12:00:00.000+03:00,16,http://qudt.org/vocab/unit#DegreeCelsius
+http://example.org#thermometer,http://example.org#temperature,http://example.org#air,2015-06-12T12:00:00.000+03:00,15,http://qudt.org/vocab/unit#DegreeCelsius
+http://example.org#thermometer,http://example.org#temperature,http://example.org#air,2015-06-13T12:00:00.000+03:00,12,http://qudt.org/vocab/unit#DegreeCelsius
+http://example.org#thermometer,http://example.org#temperature,http://example.org#air,2015-06-14T12:00:00.000+03:00,18,http://qudt.org/vocab/unit#DegreeCelsius
+http://example.org#thermometer,http://example.org#temperature,http://example.org#air,2015-06-15T12:00:00.000+03:00,16,http://qudt.org/vocab/unit#DegreeCelsius
+http://example.org#thermometer,http://example.org#temperature,http://example.org#air,2015-06-16T12:00:00.000+03:00,23,http://qudt.org/vocab/unit#DegreeCelsius
+http://example.org#thermometer,http://example.org#temperature,http://example.org#air,2015-06-17T12:00:00.000+03:00,17,http://qudt.org/vocab/unit#DegreeCelsius
+http://example.org#thermometer,http://example.org#temperature,http://example.org#air,2015-06-18T12:00:00.000+03:00,20,http://qudt.org/vocab/unit#DegreeCelsius
+http://example.org#thermometer,http://example.org#temperature,http://example.org#air,2015-06-19T12:00:00.000+03:00,23,http://qudt.org/vocab/unit#DegreeCelsius
+http://example.org#thermometer,http://example.org#temperature,http://example.org#air,2015-06-20T12:00:00.000+03:00,22,http://qudt.org/vocab/unit#DegreeCelsius
+http://example.org#thermometer,http://example.org#temperature,http://example.org#air,2015-06-21T12:00:00.000+03:00,22,http://qudt.org/vocab/unit#DegreeCelsius
+http://example.org#thermometer,http://example.org#temperature,http://example.org#air,2015-06-22T12:00:00.000+03:00,21,http://qudt.org/vocab/unit#DegreeCelsius
+http://example.org#thermometer,http://example.org#temperature,http://example.org#air,2015-06-23T12:00:00.000+03:00,20,http://qudt.org/vocab/unit#DegreeCelsius
+http://example.org#thermometer,http://example.org#temperature,http://example.org#air,2015-06-24T12:00:00.000+03:00,18,http://qudt.org/vocab/unit#DegreeCelsius
+http://example.org#thermometer,http://example.org#temperature,http://example.org#air,2015-06-25T12:00:00.000+03:00,17,http://qudt.org/vocab/unit#DegreeCelsius
+http://example.org#thermometer,http://example.org#temperature,http://example.org#air,2015-06-26T12:00:00.000+03:00,16,http://qudt.org/vocab/unit#DegreeCelsius
+http://example.org#thermometer,http://example.org#temperature,http://example.org#air,2015-06-27T12:00:00.000+03:00,15,http://qudt.org/vocab/unit#DegreeCelsius
+http://example.org#thermometer,http://example.org#temperature,http://example.org#air,2015-06-28T12:00:00.000+03:00,15,http://qudt.org/vocab/unit#DegreeCelsius
+http://example.org#thermometer,http://example.org#temperature,http://example.org#air,2015-06-29T12:00:00.000+03:00,14,http://qudt.org/vocab/unit#DegreeCelsius
+http://example.org#thermometer,http://example.org#temperature,http://example.org#air,2015-06-30T12:00:00.000+03:00,14,http://qudt.org/vocab/unit#DegreeCelsius
