@@ -5,6 +5,12 @@
 
 package fi.uef.envi.emrooz.io;
 
+import java.util.UUID;
+
+import org.openrdf.model.URI;
+import org.openrdf.model.ValueFactory;
+import org.openrdf.model.impl.ValueFactoryImpl;
+
 import fi.uef.envi.emrooz.api.SensorObservationReader;
 
 /**
@@ -27,10 +33,35 @@ import fi.uef.envi.emrooz.api.SensorObservationReader;
 public abstract class AbstractSensorObservationReader implements
 		SensorObservationReader {
 
+	private URI ns;
+	protected static final ValueFactory vf = ValueFactoryImpl.getInstance();
+	protected static final String LINE_SEPARATOR = System
+			.getProperty("line.separator");
+
+	public AbstractSensorObservationReader(URI ns) {
+		if (ns == null)
+			throw new NullPointerException("[ns = null]");
+		
+		this.ns = ns;
+	}
+	
 	@Override
 	public void remove() {
 		throw new UnsupportedOperationException(
 				"This sensor observation reader those not support removing sensor observations from the iterator.");
+	}
+	
+	protected URI _id() {
+		return _id(ns);
+	}
+	
+	protected static URI _id(URI ns) {
+		String s = ns.stringValue();
+
+		if (s.endsWith("#"))
+			return vf.createURI(ns + UUID.randomUUID().toString());
+
+		return vf.createURI(ns + "#" + UUID.randomUUID().toString());
 	}
 
 }
